--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 	
 	<application
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@drawable/ic_arcanaplannerlogo"
+		android:roundIcon="@drawable/ic_arcanaplannerlogo"
 		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 		<activity
@@ -20,3 +20,5 @@
 		</activity>
 	</application>
 </manifest>
+<!--android:icon="@mipmap/ic_launcher"-->
+<!--android:roundIcon="@mipmap/ic_launcher_round"-->
